--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<p>Hello 大家好</p>
-<p>我是霸都丶傲天，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
-
-<ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
-  <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
-</ul>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="keywords" content="SxTOP0" />
+    <meta name="author" content="SxTOP0" />
+    <meta name="description" content="在读高二，是个沙雕">
+    <meta http-equiv="refresh" content="45" />
+  </head>
+  <body>
+    <h1></h1>
+  </body>
+</html>
