--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>安静的离去，和孤单一起...</title>
     <meta charset="utf-8" />
     <meta name="keywords" content="SxTOP0" />
     <meta name="author" content="SxTOP0" />
