--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>安静的离去，和孤单一起...</title>
+    <title>I Hate It...</title>
     <meta charset="utf-8" />
     <meta name="keywords" content="SxTOP0" />
     <meta name="author" content="SxTOP0" />
@@ -9,6 +9,14 @@
     <meta http-equiv="refresh" content="45" />
   </head>
   <body>
-    <h1></h1>
+    <h1>SxTOP0</h1>
+    <ul>我的游戏
+      <li>在八中读三年</li>
+      <li>梦想大陆</li>
+      <li>上帝不准我上天堂</li>
+    </ul>
+    <ul>
+      <li>QQ - 2805238699</li>
+    </ul>
   </body>
 </html>
