--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li>梦想大陆</li>
       <li>上帝不准我上天堂</li>
     </ul>
-    <ul>
+    <ul>本帅比联系方式
       <li>QQ - 2805238699</li>
     </ul>
   </body>
